@@ -1992,6 +1992,7 @@ can edit in same subtitle file (collaboration)",
                 SubtitleFontColor = "Subtitle font color",
                 SubtitleBackgroundColor = "Subtitle background color",
                 SpellChecker = "Spell checker",
+                VideoAutoOpen = "Auto-open video file when opening subtitle",
                 RememberRecentFiles = "Show recent files (for reopen)",
                 StartWithLastFileLoaded = "Start with last file loaded",
                 RememberSelectedLine = "Remember selected line",
